--- a/index.html
+++ b/index.html
@@ -13,6 +13,40 @@
         <title>nexter &mdash; your home, your freedom</title> 
     </head>
     <body class="container">
-        Test
+        <div class="sidebar">
+            Sidebar
+        </div>
+
+        <div class="header">
+            Header
+        </div>
+
+        <div class="realtors">
+            Realtors
+        </div>
+
+        <div class="features">
+            Features
+        </div>
+
+        <div class="stories__pictures">
+            Story Pictures
+        </div>
+
+        <div class="storeis__content">
+            Stories Content
+        </div>
+
+        <section class="homes">
+            Home
+        </section>
+
+        <section class="gallery">
+            Gallery
+        </section>
+
+        <footer class="footer">
+            Footer
+        </footer>
     </body>
 </html>
